fix a display bug on safari during the tutorial

--- a/src/experiment/components/styles/TutorialOverlay.module.scss
+++ b/src/experiment/components/styles/TutorialOverlay.module.scss
@@ -147,6 +147,7 @@
 
   .instruction,
   .info {
+    transform: translate3d(0, 0, 0);
     position: relative;
   }
 }
